objects/WhatsAppReceipt__c/WhatsAppReceipt__c.object-meta.xml
<CustomObject>
    <description>Object to store receipts about a particular message</description>
    <label>WhatsApp Receipt</label>
    <nameField>
        <label>WhatsApp Receipts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WhatsApp Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>