objects/WhatsAppReceipt__c/fields/DeliveredDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveredDate__c</fullName>
    <description>Field to store the date that a webhook was received with the &apos;delivered&apos; status</description>
    <label>Delivered Date</label>
    <type>DateTime</type>
</CustomField>