objects/WhatsAppReceipt__c/fields/MessagingSession__c.field-meta.xml
<CustomField>
    <fullName>MessagingSession__c</fullName>
    <description>Relationship to Messaging Session for better visibility</description>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>WhatsApp Receipts</relationshipLabel>
    <relationshipName>WhatsAppReceipts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>