objects/WhatsAppReceipt__c/fields/ReadDate__c.field-meta.xml
<CustomField>
    <fullName>ReadDate__c</fullName>
    <description>Field to store the date that a webhook was received with the &apos;read&apos; status</description>
    <label>Read Date</label>
    <type>DateTime</type>
</CustomField>