objects/WhatsAppReceipt__c/fields/SendFailed__c.field-meta.xml
<CustomField>
    <fullName>SendFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to store the date that a webhook was received with the &apos;failed&apos; status</description>
    <label>Send Failed</label>
    <type>Checkbox</type>
</CustomField>