objects/WhatsAppReceipt__c/fields/SentDate__c.field-meta.xml
<CustomField>
    <fullName>SentDate__c</fullName>
    <description>Field to store the date that a webhook was received with the &apos;sent&apos; status</description>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>